{
    "name": "New Controls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "f063a4e2-026a-483c-8c2c-f4ec756a78f8",
            "actions": [
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "c73cac36-71ee-4940-be35-e765a640a7a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "8c91b690-6749-46e4-901e-f26ef71c9bfb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "52bc967e-3559-4417-9b85-8b448196d3b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94b01318-fd0c-4dc9-9455-9512ae7aafcb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8e10fd7-35d7-4fdc-a7b8-1c5e275e4f2d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d54e542e-f355-4853-80d7-ae7492e98e8c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}